# inner_dialog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: chatgpt_cache.json  extract_cache.json  gemini_cache.json  inner_dialog_cache.json  palm_cache.json  t2cb.json
experiment_result/: 20230712_llm_integrate_vs_naive_integreate  20230714_chatgpt_infocov  20230714_inner_dialog  20230718_chatgpt_business  20230718_chatgpt_multirond  20230718_gpt_business_threshold0.6  20230718_ind_business_threshold0.6  20230718_inner_dialog_business_10_1  20230718_inner_dialog_business_5_2  20230727_chatgpt_pathcov  20230727_inner_dialog_pathcov  infocov_v1_chatgpt  infocov_v1_inner_dialogv2  path_cov_exp.ods
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  QuestionInput.tsx  main.tsx  store.ts  utils.ts
frontend/src/styles/: applies.css
inner_dialog/: api.py  auth.py  chatgpt.py  experiment.py  hier_info_struct.py  info_cov.py  inner_dialog.py  model.py  reflexion.py  run_model.py  self_ask.py  utils.py
logs/: 20230718_chatgpt_multi_round  20230727_inner_dialog  20230730_all_subtopics  panel_log_v1  panel_log_v2  panel_log_v2_analysis  panel_output_v2  test_supervisor_integration_log_v1  travel_analyze.md
tests/: test_api.py  test_auth.py  test_bertscore.py  test_chatgpt.py  test_hier_info_struct.py  test_info_cov.py  test_sentense_transformer.py  test_utils.py
